--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import heroImage from "@/images/wet plastic grinding.webp";
 import faqs from "@/data_files/faqs.json";
 import features from "@/data_files/features.json";
 import pricing from "@/data_files/pricing.json";
-import featureImage from "@/images/hero-image.webp";
+import featureImage from "@/images/pp_pe_film_recycling_washing_line.webp";
 import construction from "@/images/Thermal_dryer.webp";
 import tools from "@/images/Zig-Zag_Air_Classifier.webp";
 import dashboard from "@/images/Belt_conveyors.webp";
