--- a/src/components/ui/cards/CardBlogRecent.astro
+++ b/src/components/ui/cards/CardBlogRecent.astro
@@ -37,7 +37,7 @@ interface Props {
         class="outline-none ring-zinc-500 transition duration-300 hover:text-orange-400 focus-visible:ring dark:text-neutral-300 dark:ring-zinc-200 dark:hover:text-neutral-50 dark:focus:outline-none"
         href={`/blog/${blogEntry.slug}/`}
       >
-        {blogEntry.data.description}
+        {blogEntry.data.title}
       </a>
     </h2>
     <!-- Container for the author's avatar and metadata -->
