--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -37,13 +37,13 @@ const pageTitle: string = `Blog | ${SITE.title}`;
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://www.recyclemachine.net/recycling-mechanical-products",
-    "url": "https://www.recyclemachine.net/recycling-mechanical-products",
+    "@id": "https://www.recyclemachine.net/recycling-machines",
+    "url": "https://www.recyclemachine.net/recycling-machines",
     "name": "Blog | Rumtoo Machinery",
     "description": "Through insights from the Rumtoo expert team, understand the latest product trends in the plastic recycling machinery industry.",
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://recyclemachine.net",
+      "url": "https://www.recyclemachine.net",
       "name": "Rumtoo Machinery",
       "description": "Rumtoo offers top-tier plastic recycling machine and pelletizing to meet all your project needs."
     },
