--- a/src/components/ui/cards/CardBlogRecent.astro
+++ b/src/components/ui/cards/CardBlogRecent.astro
@@ -40,6 +40,10 @@ interface Props {
         {blogEntry.data.title}
       </a>
     </h2>
+    <!-- Meta description -->
+    <p class="mt-2 text-neutral-600 dark:text-neutral-400">
+      {blogEntry.data.description}
+    </p>
     <!-- Container for the author's avatar and metadata -->
     <div class="mt-6 flex items-center sm:mt-10">
       <AvatarBlogLarge blogEntry={blogEntry} />
