--- a/src/components/sections/ContactSection.astro
+++ b/src/components/sections/ContactSection.astro
@@ -31,7 +31,7 @@ const formSubTitle: string = "We'll get back to you in 1-2 business days.";
           {formTitle}
         </h2>
 
-        <form id="contact-form">
+        <form id="contact-form" action="/send-email" method="POST>
           <div class="grid gap-4">
             <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
               <TextInput id="hs-firstname-contacts" label="First Name" name="hs-firstname-contacts" />
