--- a/src/components/sections/ContactSection.astro
+++ b/src/components/sections/ContactSection.astro
@@ -35,44 +35,41 @@ const formSubTitle: string = "We'll get back to you in 1-2 business days.";
         <h2
           class="mb-8 text-xl font-bold text-neutral-700 dark:text-neutral-300"
         >
-          {formTitle}
-        </h2>
-        <!-- Form for user input with various input fields.-->
-        <!-- Each field utilizes a different input component for the specific type of input (text, email, phone, and textarea)-->
-        <form>
-          <div class="grid gap-4">
-            <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
-              <TextInput
-                id="hs-firstname-contacts"
-                label="First Name"
-                name="hs-firstname-contacts"
-              />
-              <TextInput
-                id="hs-lastname-contacts"
-                label="Last Name"
-                name="hs-firstname-contacts"
-              />
-            </div>
-            <EmailContactInput id="hs-email-contacts" />
-            <PhoneInput id="hs-phone-number" />
-            <TextAreaInput
-              id="hs-about-contacts"
-              label="Details"
-              name="hs-about-contacts"
-            />
-          </div>
+         <h2>{formTitle}</h2>
+<!-- Form for user input with various input fields. -->
+<form action="/api/send-email" method="POST">
+  <div class="grid gap-4">
+    <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+      <TextInput
+        id="hs-firstname-contacts"
+        label="First Name"
+        name="hs-firstname-contacts"
+      />
+      <TextInput
+        id="hs-lastname-contacts"
+        label="Last Name"
+        name="hs-lastname-contacts"
+      />
+    </div>
+    <EmailContactInput id="hs-email-contacts" name="hs-email-contacts" />
+    <PhoneInput id="hs-phone-number" name="hs-phone-number" />
+    <TextAreaInput
+      id="hs-about-contacts"
+      label="Details"
+      name="hs-about-contacts"
+    />
+  </div>
 
-          <div class="mt-4 grid">
-            <AuthBtn title="Send Message" />
-          </div>
+  <div class="mt-4 grid">
+    <AuthBtn title="Send Message" type="submit" />
+  </div>
 
-          <div class="mt-3 text-center">
-            <p class="text-sm text-neutral-600 dark:text-neutral-400">
-              {formSubTitle}
-            </p>
-          </div>
-        </form>
-      </div>
+  <div class="mt-3 text-center">
+    <p class="text-sm text-neutral-600 dark:text-neutral-400">
+      {formSubTitle}
+    </p>
+  </div>
+</form>
 
       <!--ContactIconBlocks are used to display different methods of contacting, including visiting office, email, browsing knowledgebase, and FAQ.-->
       <div class="divide-y divide-neutral-300 dark:divide-neutral-700">
