--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -118,10 +118,10 @@ const pageTitle: string = `Products | ${SITE.title}`;
   <!--Features statistics section-->
   <FeaturesStatsAlt
     title="Why Choose Rumtoo?"
-    subTitle="Transform your ideas into tangible results with ScrewFast tools. Whether you're starting with a sketch on a napkin or diving into a comprehensive construction project, our tools are engineered to help you build with confidence."
+    subTitle="Our plastic recycling equipment is engineered with cutting-edge technology to improve efficiency and minimize waste. Each feature is designed to facilitate better recycling processes, ensuring environmentally-friendly operations. Whether you're a small business or a large corporation, our equipment adapts to your needs. Explore the benefits of sustainability, increased productivity, and reduced operational costs."
     benefits={[
       "Robust and reliable tools for long-lasting performance.",
-      "Innovative solutions tailored to modern construction needs.",
+      "Innovative solutions tailored to modern recycling equipment needs.",
       "Customer support dedicated to your project's success.",
     ]}
   />
