--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -1,19 +1,11 @@
 ---
 // Import section components
 import MainLayout from "@/layouts/MainLayout.astro";
-import ProductTabBtn from "@/components/ui/buttons/ProductTabBtn.astro";
-import PrimaryCTA from "@/components/ui/buttons/PrimaryCTA.astro";
+import ProductTabBtn from "@components/ui/buttons/ProductTabBtn.astro";
+import PrimaryCTA from "@components/ui/buttons/PrimaryCTA.astro";
 import { Image } from "astro:assets";
 import { getCollection } from "astro:content";
-import { SITE } from "@/data_files/constants";
-
-// Type definition for specifications
-type Specification = {
-  title: string;
-  subTitle: string;
-  img: any;
-  imgAlt: any;
-};
+import { SITE } from "@data/constants";
 
 // Global declaration for gsap animation library
 declare global {
@@ -32,15 +24,10 @@ export async function getStaticPaths() {
 
 const { product } = Astro.props;
 
-// Ensure the product data matches the type definition
-const specificationsRight: Specification[] = (product.data.specificationsRight as Specification[]) ?? [];
-
 const pageTitle: string = `${product.data.title} | ${SITE.title}`;
 ---
 
-<MainLayout
-  title={pageTitle}
->
+<MainLayout title={pageTitle}>
   <div id="overlay" class="fixed inset-0 bg-neutral-200 dark:bg-neutral-800">
   </div>
 
@@ -159,21 +146,65 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
                 ))
               }
             </div>
-            <div class="mt-6 max-w-md space-y-6 md:ml-auto md:mt-0">
-              {
-                product.data.specificationsRight?.map((spec) => (
-                  <div>
-                    <h3 class="block font-bold text-neutral-800 dark:text-neutral-200">
-                      {spec.title}
-                    </h3>
-                    <p class="text-neutral-600 dark:text-neutral-400">
-                      {spec.subTitle}
-
-                    </p>
+            {
+              product.data.specificationsRight ? (
+                <div class="mt-6 max-w-md space-y-6 md:ml-auto md:mt-0">
+                  {product.data.specificationsRight?.map((spec) => (
+                    <div>
+                      <h3 class="block font-bold text-neutral-800 dark:text-neutral-200">
+                        {spec.title}
+                      </h3>
+                      <p class="text-neutral-600 dark:text-neutral-400">
+                        {spec.subTitle}
+                      </p>
+                    </div>
+                  ))}
+                </div>
+              ) : product.data.tableData ? (
+                <div class="mt-6 space-y-6 md:ml-auto md:mt-0">
+                  <div class="flex flex-col">
+                    <div class="-m-1.5 overflow-x-auto">
+                      <div class="inline-block min-w-full p-1.5 align-middle">
+                        <div class="overflow-hidden">
+                          <table class="min-w-full divide-y divide-neutral-300 dark:divide-neutral-700">
+                            <thead>
+                              <tr>
+                                {product.data.tableData?.[0].feature?.map(
+                                  (header) => (
+                                    <th
+                                      scope="col"
+                                      class="px-6 py-3 text-start text-xs font-medium uppercase text-neutral-500 dark:text-neutral-500"
+                                    >
+                                      {header}
+                                    </th>
+                                  )
+                                )}
+                              </tr>
+                            </thead>
+                            <tbody class="divide-y divide-neutral-300 dark:divide-neutral-700">
+                              {product.data.tableData?.map((row) =>
+                                // Wrap each row's content in a separate <tr> element
+                                row.description.map((rowData) => (
+                                  <tr>
+                                    {/* Iterate through each cell value in the row's description array */}
+                                    {rowData.map((cellValue) => (
+                                      // Render each cell value in its own <td> element
+                                      <td class="whitespace-nowrap px-6 py-4 text-sm font-medium text-neutral-600 dark:text-neutral-400">
+                                        {cellValue}
+                                      </td>
+                                    ))}
+                                  </tr>
+                                ))
+                              )}
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                ))
-              }
-            </div>
+                </div>
+              ) : null
+            }
           </div>
         </div>
       </div>
@@ -211,132 +242,144 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
       </div>
     </div>
   </div>
+</MainLayout>
 
-  <script is:inline src="/scripts/vendor/gsap/gsap.min.js"></script>
-  <script>
-    window.addEventListener("load", () => {
-      if (window.gsap) {
-        const gsap = window.gsap;
-        gsap.set("#fadeText", {
-          autoAlpha: 0,
-          y: 50,
-          willChange: "transform, opacity",
-        });
-        gsap.set("#fadeInUp", {
-          autoAlpha: 0,
-          y: 50,
-          willChange: "transform, opacity",
-        });
-        gsap.set("#fadeInMoveRight", {
-          autoAlpha: 0,
-          x: 300,
-          willChange: "transform, opacity",
-        });
+<script>
+  import { gsap } from "gsap";
 
-        let timeline = gsap.timeline({ defaults: { overwrite: "auto" } });
+  type AnimationSettings = {
+    autoAlpha?: number;
+    y?: number;
+    x?: number;
+    willChange?: string;
+  };
 
-        timeline.to("#fadeText", {
-          duration: 1.5,
-          autoAlpha: 1,
-          y: 0,
-          delay: 1,
-          ease: "power2.out",
-        });
+  function setElementAnimationDefaults(
+    id: string,
+    settings: AnimationSettings
+  ) {
+    gsap.set(id, settings);
+  }
 
-        timeline.to(
-          "#fadeInUp",
-          { duration: 1.5, autoAlpha: 1, y: 0, ease: "power2.out" },
-          "-=1.2",
-        );
+  setElementAnimationDefaults("#fadeText", {
+    autoAlpha: 0,
+    y: 50,
+    willChange: "transform, opacity",
+  });
 
-        timeline.to(
-          "#fadeInMoveRight",
-          { duration: 1.5, autoAlpha: 1, x: 0, ease: "power2.inOut" },
-          "-=1.4",
-        );
+  setElementAnimationDefaults("#fadeInUp", {
+    autoAlpha: 0,
+    y: 50,
+    willChange: "transform, opacity",
+  });
 
-        timeline.to("#overlay", { duration: 1, autoAlpha: 0, delay: 0.2 });
-      }
-    });
-  </script>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      function setButtonInactive(btn: any, activeButton: any) {
-        if (btn !== activeButton) {
-          btn.classList.remove(
-            "active",
-            "bg-neutral-100",
-            "hover:border-transparent",
-            "dark:bg-white/[.05]",
-          );
+  setElementAnimationDefaults("#fadeInMoveRight", {
+    autoAlpha: 0,
+    x: 300,
+    willChange: "transform, opacity",
+  });
 
-          const tabId = btn.getAttribute("data-target");
-          if (tabId) {
-            const contentElement = document.querySelector(tabId);
-            if (contentElement) {
-              contentElement.classList.add("hidden");
-            }
-          }
+  let timeline = gsap.timeline({ defaults: { overwrite: "auto" } });
 
-          changeHeadingStyle(
-            btn,
-            ["text-neutral-800", "dark:text-neutral-200"],
-            ["text-orange-400", "dark:text-orange-300"],
-          );
-        }
-      }
+  timeline.to("#fadeText", {
+    duration: 1.5,
+    autoAlpha: 1,
+    y: 0,
+    delay: 1,
+    ease: "power2.out",
+  });
 
-      function activateButton(button: any) {
-        button.classList.add(
+  timeline.to(
+    "#fadeInUp",
+    { duration: 1.5, autoAlpha: 1, y: 0, ease: "power2.out" },
+    "-=1.2"
+  );
+
+  timeline.to(
+    "#fadeInMoveRight",
+    { duration: 1.5, autoAlpha: 1, x: 0, ease: "power2.inOut" },
+    "-=1.4"
+  );
+
+  timeline.to("#overlay", { duration: 1, autoAlpha: 0, delay: 0.2 });
+</script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    function setButtonInactive(btn: any, activeButton: any) {
+      if (btn !== activeButton) {
+        btn.classList.remove(
           "active",
           "bg-neutral-100",
-          ",hover:border-transparent",
-          "dark:bg-white/[.05]",
+          "hover:border-transparent",
+          "dark:bg-white/[.05]"
         );
 
-        const tabId = button.getAttribute("data-target");
+        const tabId = btn.getAttribute("data-target");
         if (tabId) {
-          const contentElementToShow = document.querySelector(tabId);
-          if (contentElementToShow) {
-            contentElementToShow.classList.remove("hidden");
+          const contentElement = document.querySelector(tabId);
+          if (contentElement) {
+            contentElement.classList.add("hidden");
           }
         }
 
         changeHeadingStyle(
-          button,
-          ["text-orange-400", "dark:text-orange-300"],
+          btn,
           ["text-neutral-800", "dark:text-neutral-200"],
+          ["text-orange-400", "dark:text-orange-300"]
         );
       }
+    }
 
-      function changeHeadingStyle(
-        button: any,
-        addClasses: any,
-        removeClasses: any,
-      ) {
-        let heading = button.querySelector("span");
-        if (heading) {
-          heading.classList.remove(...removeClasses);
-          heading.classList.add(...addClasses);
+    function activateButton(button: any) {
+      button.classList.add(
+        "active",
+        "bg-neutral-100",
+        ",hover:border-transparent",
+        "dark:bg-white/[.05]"
+      );
+
+      const tabId = button.getAttribute("data-target");
+      if (tabId) {
+        const contentElementToShow = document.querySelector(tabId);
+        if (contentElementToShow) {
+          contentElementToShow.classList.remove("hidden");
         }
       }
 
-      const tabButtons = document.querySelectorAll("[data-target]");
+      changeHeadingStyle(
+        button,
+        ["text-orange-400", "dark:text-orange-300"],
+        ["text-neutral-800", "dark:text-neutral-200"]
+      );
+    }
 
-      if (tabButtons.length > 0) {
-        changeHeadingStyle(
-          tabButtons[0],
-          ["text-orange-400", "dark:text-orange-300"],
-          [],
-        );
+    function changeHeadingStyle(
+      button: any,
+      addClasses: any,
+      removeClasses: any
+    ) {
+      let heading = button.querySelector("span");
+      if (heading) {
+        heading.classList.remove(...removeClasses);
+        heading.classList.add(...addClasses);
       }
+    }
 
-      tabButtons.forEach((button) => {
-        button.addEventListener("click", () => {
-          tabButtons.forEach((btn) => setButtonInactive(btn, button));
-          activateButton(button);
-        });
+    const tabButtons = document.querySelectorAll("[data-target]");
+
+    if (tabButtons.length > 0) {
+      changeHeadingStyle(
+        tabButtons[0],
+        ["text-orange-400", "dark:text-orange-300"],
+        []
+      );
+    }
+
+    tabButtons.forEach((button) => {
+      button.addEventListener("click", () => {
+        tabButtons.forEach((btn) => setButtonInactive(btn, button));
+        activateButton(button);
       });
     });
-  </script>
-</MainLayout>
+  });
+</script>
