--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -139,7 +139,7 @@ const avatarSrcs: Array<string> = [
 
   <HeroSectionAlt
     title="Let's Build Together"
-    subTitle="A professional Plastic Recycling Machine manufacturer in China."
+    subTitle="A Professional Plastic Recycling Machine manufacturer in China."
     url="https://www.recyclemachine.net"
   />
 </MainLayout>
