--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ const avatarSrcs: Array<string> = [
     subTitle="Top-quality plastic recycling machines for every project need."
     primaryBtn="View Our Equipment"
     primaryBtnURL="/blog"
-    secondaryBtn="Contact Sales Team"
+    secondaryBtn="Contact Sales Teams"
     secondaryBtnURL="mailto:sales@rumtoo.com"
     withReview={true}
     avatars={avatarSrcs}
